Added ApiResultsQueryController and created cgetAction (not completed)
